--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,7 @@ en:
         password: Password
         password_confirmation: Confirm Password
       post:
+        title: Title
         content: Content
       tag:
         label: Label
